--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "url": "git://github.com/n4kz/react-native-material-textfield.git"
   },
   "dependencies": {
-    "prop-types": "^15.5.9"
+    "prop-types": "^15.5.9",
+    "deprecated-react-native-prop-types": "4.0.0"
   },
   "peerDependencies": {
     "react": ">=16.3.0",
